--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
-unbind-key C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+# unbind-key C-b
+# set-option -g prefix C-a
+# bind-key C-a send-prefix
+
+set -g prefix2 C-a
+bind C-a send-prefix -2
 
 # bind-key C-c run "tmux save-buffer - | nohup >/dev/null 2>/dev/null xclip -i -sel clipboard"
 # bind-key C-v run "tmux set-buffer -- \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
