--- a/tmux.conf
+++ b/tmux.conf
@@ -2,8 +2,14 @@ unbind-key C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-bind-key C-c run "tmux save-buffer - | xclip -i -sel clipboard"
-bind-key C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+#bind-key C-c run "tmux show-buffer | xclip -selection clipboard -i"
+#bind-key C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+
+#bind-key C-c run "tmux save-buffer - | xclip -i -sel clipboard"
+#bind-key C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+
+bind C-c run "tmux save-buffer - | xsel -ib"
+bind C-v run "tmux set-buffer \"$(xsel -ob)\"; tmux paste-buffer"
 
 setw -g monitor-activity on
 set -g visual-activity on
